[package]
name = "baneclient"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
eframe = "0.21.3"
egui = "0.21.0"
futures-util = "0.3.26"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = "1.26.0"
tokio-stream = "0.1.12"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
